--- a/Microsoft.Libraries.API.Controllers.Impl/Microsoft.Libraries.API.Controllers.Impl.csproj
+++ b/Microsoft.Libraries.API.Controllers.Impl/Microsoft.Libraries.API.Controllers.Impl.csproj
@@ -5,18 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Microsoft.Libraries.API.Controllers.Interfaces\Microsoft.Libraries.API.Controllers.Interfaces.csproj" />
     <ProjectReference Include="..\Microsoft.Libraries.Business.Interfaces\Microsoft.Libraries.Business.Interfaces.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.AspNetCore.Mvc.ViewFeatures">
-      <HintPath>..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.mvc.viewfeatures\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Mvc.ViewFeatures.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
