--- a/Microsoft.Libraries.API.Controllers.Interfaces/Microsoft.Libraries.API.Controllers.Interfaces.csproj
+++ b/Microsoft.Libraries.API.Controllers.Interfaces/Microsoft.Libraries.API.Controllers.Interfaces.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Microsoft.AspNetCore.Mvc.Abstractions">
-      <HintPath>..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.mvc.abstractions\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Mvc.Abstractions.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
